--- a/Personalinfo/index.html
+++ b/Personalinfo/index.html
@@ -30,6 +30,7 @@
     <a href="#About">About</a>
     <a href="#Resume">Resume</a>
     <a href="#Portfolio">Portfolio</a>
+    <a href="#Github">Github</a>
     <a href="#Contact">Contact</a>
     <a href="../Linktree/index.html">Linktree</a>
   </div>
