--- a/Personalinfo/index.html
+++ b/Personalinfo/index.html
@@ -31,6 +31,7 @@
     <a href="#Portfolio">Portfolio</a>
     <a href="#Github">Github</a>
     <a href="#Contact">Contact</a>
+    <a href="#Contact">HEY</a>
     <a href="../Linktree/index.html">Linktree</a>
   </div>
 
