--- a/Linktree/index.html
+++ b/Linktree/index.html
@@ -44,8 +44,8 @@
             <a href="spotify://user?screen_name=username" target="_blank"><div class="social">
                 <img class="images" src="./images/Spotify_logo_without_text.svg.png">
             </div></a>
-            <a href="https://cathandbol.cat/" target="_blank"><div class="social">
-                <img class="images" src="./images/cathandbol.png">
+            <a href="https://github.com/bescoss?tab=repositories" target="_blank"><div class="social">
+                <img class="images" src="./images/github.png">
             </div></a>
         </div>
     </div>
